--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -1,20 +1,29 @@
 {% extends 'base.html' %}
 
 {% block title %}Proyectos - Portfolio{% endblock %}
+<!-- Extiende la plantilla base y define el título. -->
 
 {% block content %}
 <div class="container">
+    <!-- Encabezado la página -->
     <h1 class="text-center mb-5">Mis Proyectos</h1>
+    <!-- Organización de cuadrícula responsiva -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% for project in projects %}
         <div class="col">
+            <!-- Tarjeta de cada proyecto -->
             <div class="card h-100">
+                <!-- Contenedor -->
                 <div class="card-img-container">
                     <img src="{{ project.image.url }}" class="card-img-top" alt="{{ project.name }}">
                 </div>
+                <!-- Cuerpo de la tarjeta -->
                 <div class="card-body d-flex flex-column">
+                    <!-- Título del proyecto -->
                     <h5 class="card-title">{{ project.name }}</h5>
+                    <!-- Descripción del proyecto, truncada a 120 caracteres -->
                     <p class="card-text mb-4">{{ project.description|truncatechars:120 }}</p>
+                    <!-- Enlace al proyecto si se proporciona una URL -->
                     {% if project.url %}
                         <a href="{{ project.url }}" class="btn btn-primary mt-auto" target="_blank">Ver Proyecto</a>
                     {% endif %}
@@ -22,6 +31,7 @@
             </div>
         </div>
         {% endfor %}
+        <!-- Si no hay proyectos, este bloque no mostrará nada -->
     </div>
 </div>
 {% endblock %}
