Añadiendo comentarios a las secciones del home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}Inicio - Portfolio{% endblock %}
-<!-- Extiende la plantilla base y define el título de la página como "Inicio - Portfolio". -->
+<!-- Extiende la plantilla base y define el título. -->
 
 {% block content %}
 <div class="container my-5">
