Optimizando código & comentarios home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,9 +48,9 @@
         <a href="{% static 'docs/cv.pdf' %}" class="btn btn-primary" download>Descargar CV</a>
     </div>
 
-    <!-- Sección de habilidades con íconos -->
+    <!-- Habilidades con íconos -->
     <div class="mt-4 text-center">
-        <h5>Habilidades:</h5>
+        <h5>Habilidades</h5>
         <div class="d-flex justify-content-center flex-wrap mt-3">
             <!-- Íconos de habilidades con descripción alternativa -->
             <img src="{% static 'icons/git.webp' %}" alt="Git" class="m-2" style="width: 30px;">
