--- a/templates/home.html
+++ b/templates/home.html
@@ -26,14 +26,20 @@
                     <h5 class="card-title mt-3">José Félix</h5>
                     <p class="card-text">Desarrollador Fullstack</p>
                 </div>
-                <!-- Botón de contacto por WhatsApp -->
-                <div class="text-center mt-4 whatsapp-div">
-                    <a href="https://wa.me/+34639949187" target="_blank" rel="noopener noreferrer">
+                <!-- Iconos de redes sociales -->
+                <div class="social-icons d-flex justify-content-center align-items-center mt-4">
+                    <a href="https://wa.me/+34639949187" target="_blank" rel="noopener noreferrer" class="mx-2">
                         <i class="fab fa-whatsapp whatsapp-icon"></i>
+                    </a>
+                    <a href="https://github.com/AmeriK88" target="_blank" rel="noopener noreferrer" class="mx-2">
+                        <i class="fab fa-github github-icon"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/jose-felix-gordo-casta%C3%B1o-dev-es/" target="_blank" rel="noopener noreferrer" class="mx-2">
+                        <i class="fab fa-linkedin linkedin-icon"></i>
                     </a>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
 
     <!-- Sección "Acerca de mí" -->
