--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,7 +16,6 @@
     --whatsapp-btn-hover: #25d366;
     --github-btn-hover: #333333;
     --linkedin-btn-hover: #0077b5;
-    --custom-text: #f5f5c4;
 }
 
 body, html {
@@ -58,6 +57,8 @@ body, html {
     margin: 0 auto;
     transition: color var(--animation-duration) var(--animation-ease);
     position: relative;
+    letter-spacing: 2px;
+    display: inline-block; 
 }
 
 /* Línea decorativa */
@@ -66,19 +67,19 @@ body, html {
     display: block;
     width: 0;
     height: 2px;
-    background-color: var(--custom-text);
+    background-color: var(--dark-text-color);
     margin: 0 auto;
     transition: width 0.3s ease-in-out;
 }
 
 .navbar-nav .nav-link:hover::after, 
 .navbar-nav .nav-link.active::after {
-    width: 20%; 
+    width: 100%; 
 }
 
 /* Link activo */
 .navbar-nav .nav-link.active {
-    color: var(--custom-text) !important;
+    color: var(--dark-text-color) !important;
     font-weight: bold;
 }
 
