--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             </button>
             
             <!-- Links del menú -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Inicio</a>
