--- a/templates/home.html
+++ b/templates/home.html
@@ -42,18 +42,6 @@
         </div>        
     </div>
 
-    <!-- Sección "Acerca de mí" -->
-    <div id="about" class="mt-4 text-center">
-        <p>
-            ¡Hola! Soy José, desarrollador web con pasión por crear soluciones digitales modernas y eficaces. Me especializo en <strong>Django</strong> para construir aplicaciones web dinámicas y robustas. También tengo experiencia en automatización con <strong>Python</strong> y librerías como <strong>Kivy</strong> y KivyMD, además de sólidos conocimientos en <strong>HTML5, CSS3</strong> y <strong>JavaScript</strong>.
-            <br><br>
-            Actualmente, estoy ampliando mis habilidades con <strong>React</strong> y <strong>Node.js</strong>, trabajando en proyectos que desafían mi creatividad y crecimiento. Si tienes una idea o un proyecto en mente, ¡estaré encantado de colaborar contigo!
-            <br><br>
-            ¿Tienes un proyecto en mente? ¡Hablemos y construyamos algo increíble juntos!
-        </p>
-        <a href="{% static 'docs/cv.pdf' %}" class="btn btn-primary" download>Descargar CV</a>
-    </div>
-
     <!-- Habilidades con íconos -->
     <div class="mt-4 text-center">
         <h5>Habilidades</h5>
@@ -68,6 +56,27 @@
             <img src="{% static 'icons/bootstrap.webp' %}" alt="Bootstrap" class="m-2" style="width: 30px;">
             <img src="{% static 'icons/react.webp' %}" alt="React" class="m-2" style="width: 30px;">
         </div>
+    </div>
+
+    <!-- Sección "Acerca de mí" -->
+    <div id="about" class="about-section mt-5 text-center">
+        <h2 class="about-title">Acerca de mí</h2>
+        <p class="about-text mt-3">
+            ¡Hola! Soy José, desarrollador web con pasión por crear soluciones digitales modernas y eficaces. Me especializo en <strong>Django</strong> para construir aplicaciones web dinámicas y robustas. También tengo experiencia en automatización con <strong>Python</strong> y librerías como <strong>Kivy</strong> y KivyMD, además de sólidos conocimientos en <strong>HTML5, CSS3</strong> y <strong>JavaScript</strong>.
+            <br><br>
+            Actualmente, estoy ampliando mis habilidades con <strong>React</strong> y <strong>Node.js</strong>, trabajando en proyectos que desafían mi creatividad y crecimiento.
+        </p>
+        <a href="{% static 'docs/cv.pdf' %}" class="btn btn-primary about-button" download>Descargar CV</a>
+    </div>
+
+    
+     <!-- Call-to-Action -->
+     <div class="cta-section text-center my-5">
+        <h2 class="cta-text">¿Tienes un proyecto en mente?</h2>
+        <p class="cta-subtext">¡Hablemos y construyamos algo increíble juntos!</p>
+        <a href="https://wa.me/+34639949187" class="btn btn-primary cta-button" target="_blank" rel="noopener noreferrer">
+            ¡Contáctame Ahora!
+        </a>
     </div>
 </div>
 {% endblock %}
