Fix: alineado del texto about section -start-

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,9 +59,9 @@
     </div>
 
     <!-- Sección "Acerca de mí" -->
-    <div id="about" class="about-section mt-5 text-center">
+    <div id="about" class="about-section mt-5">
         <h2 class="about-title">Acerca de mí</h2>
-        <p class="about-text mt-3">
+        <p class="about-text mt-3 text-start">
             ¡Hola! Soy José, desarrollador web con pasión por crear soluciones digitales modernas y eficaces. Me especializo en <strong>Django</strong> para construir aplicaciones web dinámicas y robustas. También tengo experiencia en automatización con <strong>Python</strong> y librerías como <strong>Kivy</strong> y KivyMD, además de sólidos conocimientos en <strong>HTML5, CSS3</strong> y <strong>JavaScript</strong>.
             <br><br>
             Actualmente, estoy ampliando mis habilidades con <strong>React</strong> y <strong>Node.js</strong>, trabajando en proyectos que desafían mi creatividad y crecimiento.
