--- a/templates/home.html
+++ b/templates/home.html
@@ -66,15 +66,15 @@
             <br><br>
             Actualmente, estoy ampliando mis habilidades con <strong>React</strong> y <strong>Node.js</strong>, trabajando en proyectos que desafían mi creatividad y crecimiento.
         </p>
-        <a href="{% static 'docs/cv.pdf' %}" class="btn btn-primary about-button" download>Descargar CV</a>
+        <a href="{% static 'docs/cv.pdf' %}" class="cta-button cta-section" download>Descargar CV</a>
     </div>
 
     
      <!-- Call-to-Action -->
      <div class="cta-section text-center my-5">
-        <h2 class="cta-text">¿Tienes un proyecto en mente?</h2>
-        <p class="cta-subtext">¡Hablemos y construyamos algo increíble juntos!</p>
-        <a href="https://wa.me/+34639949187" class="btn btn-primary cta-button" target="_blank" rel="noopener noreferrer">
+        <h2 class="cta-text mb-4">¿Tienes un proyecto en mente?</h2>
+        <p class="cta-subtext mb-5">¡Hablemos y construyamos algo increíble juntos!</p>
+        <a href="https://wa.me/+34639949187" class="cta-button" target="_blank" rel="noopener noreferrer">
             ¡Contáctame Ahora!
         </a>
     </div>
