--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -410,6 +410,34 @@ footer a:hover::after {
     border-top: none;
 }
 
+.post-header h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-transform: capitalize;
+    color: var(--primary-color);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 1rem;
+}
+
+.post-content pre {
+    background: #2d2d2d;
+    color: #f8f8f2;
+    padding: 1rem;
+    border-radius: 8px;
+    overflow-x: auto;
+    font-size: 0.9rem;
+    line-height: 1.5;
+}
+
+.post-content code {
+    font-family: 'Courier New', Courier, monospace;
+    background: #2d2d2d;
+    color: #f8f8f2;
+    padding: 0.2rem 0.4rem;
+    border-radius: 4px;
+}
+
+
 /* Animación texto */
 .animated-text-container {
     position: relative;
