--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/projects/' %}active{% endif %}" href="/projects/">Proyectos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/services/' %}active{% endif %}" href="/services/">Servicios</a>
+                    </li>                    
                 </ul>
             </div>
         </div>
