--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,10 @@
     <meta property="og:title" content="Portafolio de José Félix">
     <meta property="og:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Fullstack.">
     <meta http-equiv="Cache-Control" content="max-age=2592000, must-revalidate">
+    <meta property="og:type" content="website">
+    <meta property="og:url"  content="{{ request.build_absolute_uri }}">
+    <meta property="og:image" content="{{ STATIC_URL }}images/profile.jpg">
+    <meta name="twitter:card" content="summary_large_image">
 
     <title>{% block title %}Portfolio{% endblock %}</title>
 
@@ -68,5 +72,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/animation.js' %}"></script>
+    <script src="{% static 'js/counters.js' %}"></script>
 </body>
 </html>
