--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
 
     <title>{% block title %}Portfolio{% endblock %}</title>
 
+     <!-- Tipografía “coder” -->
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
