Style: updated font family in css settings * font-family: var(--code-font), 'Roboto', sans-serif;

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
     <div id="about" class="about-section mt-5">
         <h2 class="about-title">Acerca de mí</h2>
         <p class="about-text mt-3">
-            ¡Hola! Soy José, desarrollador de sofware con pasión por crear soluciones modernas y eficaces. Me especializo en <strong>Django</strong> para construir aplicaciones web dinámicas, robustas y seguras. Tengo experiencia en automatización con <strong>Python</strong> y librerías como <strong>Pyautogui</strong> para manejo de intarfaz junto <strong>Selenium</strong>. Tengo conocimientos en <strong>Kivy</strong> y <strong>KivyMD</strong>, además de sólidos conocimientos en <strong>HTML5, CSS3</strong> y <strong>JavaScript</strong>.
+            ¡Hola! Soy José, desarrollador de sofware con pasión por crear soluciones modernas y eficaces. Mi especialidad,<strong>Django</strong> para construir aplicaciones web dinámicas, robustas y seguras. Tengo experiencia en automatización con <strong>Python</strong> y librerías como <strong>Pyautogui</strong> para manejo de intarfaz junto <strong>Selenium</strong>. Tengo conocimientos en <strong>Kivy</strong> y <strong>KivyMD</strong>, además de sólidos conocimientos en <strong>HTML5, CSS3</strong> y <strong>JavaScript</strong>.
             <br><br>
             Actualmente, estoy ampliando mis habilidades con <strong>React</strong>, <strong>Flutter</strong> y <strong>Node.js</strong>, trabajando en proyectos que desafían mi creatividad y crecimiento.
         </p>
